# simplematch

./: .clippy.toml  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Justfile  README.md  cspell.json
.bumpversion/: msrv.toml  version.toml
.dicts/: custom.txt
.github/workflows/: cicd.yml  fuzz.yml  publish.yml
benchmarks/: Cargo.toml
benchmarks/benches/: compare.rs  dowild.rs  random.rs
benchmarks/fixtures/: pattern_10_haystack_1000.json  pattern_10_haystack_10000.json  pattern_10_haystack_100000.json  pattern_10_haystack_128.json  pattern_10_haystack_50000.json  pattern_10_haystack_512.json  pattern_20_haystack_1000.json  pattern_20_haystack_10000.json  pattern_20_haystack_100000.json  pattern_20_haystack_128.json  pattern_20_haystack_50000.json  pattern_20_haystack_512.json  pattern_40_haystack_1000.json  pattern_40_haystack_10000.json  pattern_40_haystack_100000.json  pattern_40_haystack_128.json  pattern_40_haystack_50000.json  pattern_40_haystack_512.json  pattern_5_haystack_1000.json  pattern_5_haystack_10000.json  pattern_5_haystack_100000.json  pattern_5_haystack_128.json  pattern_5_haystack_50000.json  pattern_5_haystack_512.json  pattern_80_haystack_1000.json  pattern_80_haystack_10000.json  pattern_80_haystack_100000.json  pattern_80_haystack_128.json  pattern_80_haystack_50000.json  pattern_80_haystack_512.json
benchmarks/tests/: main.rs
common/: Cargo.toml
common/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dowild.rs  dowild_with.rs
fuzz/src/: lib.rs
src/: lib.rs
tests/it/: dowild.rs  dowild_with.rs  import.rs  main.rs  options.rs
xtask/: Cargo.toml
xtask/src/: iai_callgrind.rs  lib.rs  main.rs
