[workspace]
members = ["benchmarks", "common", "xtask"]

[package]
authors = ["gamma0987 <gamma0987@posteo.de>"]
categories = ["algorithms", "no-std", "text-processing"]
description = """
Fast wildcard pattern matching for strings and bytes with a simple api
"""
edition = "2021"
homepage = "https://github.com/gamma0987/simplematch"
keywords = ["no_std", "text", "matching", "glob", "wildcard"]
license = "Apache-2.0 OR MIT"
name = "simplematch"
readme = "README.md"
repository = "https://github.com/gamma0987/simplematch"
rust-version = "1.62.0"
version = "0.3.1"

[profile.release]
lto = true
codegen-units = 1
overflow-checks = false

[profile.bench]
debug = true

[profile.coverage]
inherits = "dev"
lto = false
debug = true
opt-level = 0

[features]
default = ["std"]
std = []

[dev-dependencies]
rstest = "0.18"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
