[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.87.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
markdown-table-formatter = "0.3.0"
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplematch = { path = ".." }
